--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -150,6 +150,8 @@
 						<li><a routerLink="/product">Smartphones</a></li>
 						<li><a routerLink="/product">Cameras</a></li>
 						<li><a routerLink="/product">Accessories</a></li>
+						<li><a routerLink="/item">Contrat</a></li>
+
 					</ul>
 					<!-- /NAV -->
 				</div>
