--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -151,7 +151,8 @@
 						<li><a routerLink="/product">Cameras</a></li>
 						<li><a routerLink="/product">Accessories</a></li>
 						<li><a routerLink="/item">Contrat</a></li>
-
+                        <li><a routerLink="/listFeedback">Feedbacks</a></li>*
+						<li><a routerLink="/addFeedback">add Feedbacks</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
