--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -4,7 +4,7 @@
     <div class="item-list">
       <div *ngFor="let item of items" class="card">
         <h3>{{ item.name }}</h3>
-        <p>Propriétaire : {{ item.owner.name }} </p>
+        <p>Propriétaire : {{ item.owner?.name }} </p>
         <p>Prix : {{ item.price }} €</p>
         <button (click)="createNewContract(item)">Valider</button>
     </div>
