--- a/src/app/components/sidebar/sidebar-back.component.html
+++ b/src/app/components/sidebar/sidebar-back.component.html
@@ -108,6 +108,24 @@
       </a>
     </li>
     <li class="nav-item menu-items">
+      <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+        <span class="menu-icon">
+          <i class="mdi mdi-security"></i>
+        </span>
+        <span class="menu-title">Feedbacks</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="auth">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" [routerLink]="['/add-Feedback']"> add feedback </a></li>
+          <li class="nav-item"> <a class="nav-link" [routerLink]="['/list-Feedback']"> list feedback </a></li>
+          <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
+          <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 505 </a></li>
+          <li class="nav-item"> <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-item menu-items">
       <a class="nav-link" href="../../pages/icons/font-awesome.html">
         <span class="menu-icon">
           <i class="mdi mdi-contacts"></i>
@@ -131,6 +149,7 @@
           <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
           <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 505 </a></li>
           <li class="nav-item"> <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a></li>
+          
         </ul>
       </div>
     </li>
