--- a/src/app/components/sidebar/sidebar-back.component.html
+++ b/src/app/components/sidebar/sidebar-back.component.html
@@ -119,6 +119,7 @@
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"> <a class="nav-link" [routerLink]="['/add-Feedback']"> add feedback </a></li>
           <li class="nav-item"> <a class="nav-link" [routerLink]="['/list-Feedback']"> list feedback </a></li>
+          <li class="nav-item"> <a class="nav-link" [routerLink]="['/reported-Feedbacks']"> Reported feedbacks </a></li>
           <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
           <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 505 </a></li>
           <li class="nav-item"> <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a></li>
