--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -36,7 +36,8 @@
 							<li class="active"><a data-toggle="tab" href="#tab1">Laptops</a></li>
 							<li><a data-toggle="tab" href="#tab1">Smartphones</a></li>
 							<li><a data-toggle="tab" href="#tab1">Cameras</a></li>
-							<li><a data-toggle="tab" href="#tab1">Accessories</a></li>
+							<li><a routerLink="/listFeedback">Feedbacks</a></li>
+							<li><a routerLink="/addFeedback">Add Feedback</a></li>
 						</ul>
 					</div>
 				</div>
