--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -12,6 +12,7 @@
 	<!-- HEADER -->
 	<header>
 		<!-- TOP HEADER -->
+<!-- TOP HEADER -->
 <div id="top-header">
 	<div class="container">
 		<ul class="header-links pull-left">
@@ -21,11 +22,13 @@
 		</ul>
 		<ul class="header-links pull-right">
 			<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-			<li><a routerLink="/login"><i class="fa fa-user-o"></i> Login / Register</a></li>
+			<li><a routerLink="/login"><i class="fa fa-sign-in"></i> Login</a></li>
+			<li><a routerLink="/register"><i class="fa fa-user-plus"></i> Register</a></li>
 			<li><a routerLink="/profile"><i class="fa fa-user-o"></i> My Account</a></li>
 		</ul>
 	</div>
 </div>
+
 
 		<!-- /TOP HEADER -->
 
