--- a/src/app/components/sidebar/sidebar-back.component.html
+++ b/src/app/components/sidebar/sidebar-back.component.html
@@ -90,14 +90,16 @@
       </a>
     </li>
     <li class="nav-item menu-items">
-      <a class="nav-link" href="../../pages/tables/basic-table.html">
+      <a class="nav-link" [routerLink]="['/ListUser']">
         <span class="menu-icon">
-          <i class="mdi mdi-table-large"></i>
+          <i class="mdi mdi-account-group"></i>
         </span>
-        <span class="menu-title">Tables</span>
+        <span class="menu-title">Liste des utilisateurs</span>
         <i class="menu-arrow"></i>
       </a>
     </li>
+    
+    
     <li class="nav-item menu-items">
       <a class="nav-link" href="../../pages/charts/chartjs.html">
         <span class="menu-icon">
